# SeniorCapStone

./: .gitattributes  .gitignore  AI Oral Exam Grader POC Demo.txt  API_KEY_GUIDE.md  GITHUB_SETUP.md  LICENSE  MODEL_SETUP.md  QUICKSTART.md  QUICK_EMAIL_SETUP.md  README.md  SETUP.md  START_SERVER.ps1  TEAM_SETUP.md  pyproject.toml  requirements.txt  run.py  setup.ps1  setup.sh  test_demo.py  test_demo_simple.py  test_enrollment_checks.py  test_password_hashing.py
app/: __init__.py  logging_config.py  main.py  settings.py
app/api/: auth.py  exam.py  health.py  notification.py  router.py
app/core/grading/: __init__.py  finalizer.py  generator.py  grader.py  thresholds.py
app/db/: base.py  init_db.py  migrate_courses.py  migrate_hash_passwords.py  migrate_notifications.py  migrate_question_attachments.py  models.py  repo.py  seed_users.py  session.py  verify_courses.py
app/services/: auth_service.py  email_service.py  exam_service.py  notification_service.py
app/static/: bluevox.css  styles.css
app/templates/: complete.html  confirm_alter_grades.html  course_page.html  create_exam.html  dispute_grade.html  edit_exam.html  edit_question.html  exam_details.html  exam_review.html  login.html  question.html  register_course.html  signup.html  student_course_page.html  student_dashboard.html  student_exam_details.html  teacher_analytics.html  teacher_dashboard.html  teacher_exams.html  teacher_login.html  teacher_notifications.html  teacher_settings.html
prompts/: exam_gen_v1.txt  final_grade_v1.txt  followup_gen_v1.txt  grade_response_v1.txt  question_gen_v1.txt
(+5 files in other folders)
